# python-datetime-generator

./: .gitignore  Dockerfile  README.md  Taskfile.yml  docker-compose.yaml  pyproject.toml
datetime_generator/: datetime.py
